collapsing element fixes

--- a/manon/components/collapsible.scss
+++ b/manon/components/collapsible.scss
@@ -10,7 +10,7 @@
   align-items: theme.$collapsing-element-align-items;
 
   form {
-    width: auto;
+    width: 100%;
   }
 }
 
