--- a/manon/variables/_collapsible.scss
+++ b/manon/variables/_collapsible.scss
@@ -24,7 +24,7 @@ $collapsing-element-left: null !default;
 $collapsing-element-right: null !default;
 
 // Collapsing element list
-$collapsing-element-list-gap: null !default;
+$collapsing-element-list-gap: 0 !default;
 $collapsing-element-list-background-color: null !default;
 
 // Collapsing element list item
@@ -45,7 +45,7 @@ $collapsing-element-list-item-link-padding-right: 1rem !default;
 $collapsing-element-list-item-link-padding-bottom: null !default;
 $collapsing-element-list-item-link-padding-left: 1rem !default;
 $collapsing-element-list-item-link-text-color: null !default;
-$collapsing-element-list-item-link-text-decoration: null !default;
+$collapsing-element-list-item-link-text-decoration: none !default;
 
 // Collapsing element icon
 $collapsing-element-list-icon: null !default;
@@ -57,8 +57,8 @@ $collapsing-element-list-icon-margin-right: null !default;
 
 // Collapsing element selected
 $collapsing-element-list-link-selected-background-color: null !default;
-$collapsing-element-list-link-selected-font-weight: null !default;
-$collapsing-element-list-link-selected-text-decoration: null !default;
+$collapsing-element-list-link-selected-font-weight: bold !default;
+$collapsing-element-list-link-selected-text-decoration: none !default;
 $collapsing-element-list-selected-icon: null !default;
 $collapsing-element-list-selected-icon-font-family: null !default;
 $collapsing-element-list-selected-icon-margin-left: null !default;
@@ -66,10 +66,10 @@ $collapsing-element-list-selected-icon-font-size: null !default;
 $collapsing-element-list-selected-icon-text-color: null !default;
 $collapsing-element-list-selected-icon-margin-right: null !default;
 $collapsing-element-list-link-selected-hover-background-color: null !default;
-$collapsing-element-list-link-selected-hover-text-decoration: null !default;
+$collapsing-element-list-link-selected-hover-text-decoration: none !default;
 
 // Collapsing element link hover
 $collapsing-element-list-item-hover-text-color: null !default;
 $collapsing-element-list-item-link-hover-text-color: null !default;
-$collapsing-element-list-link-hover-text-decoration: null !default;
+$collapsing-element-list-link-hover-text-decoration: none !default;
 $collapsing-element-list-item-link-hover-background-color: null !default;
